--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "fs-extra": "^11.1.1",
+    "jquery": "^3.7.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
