--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
     "sass": "^1.63.3",
