--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4"
   },
