--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.28.0",
     "fs-extra": "^11.1.1",
     "jquery": "^3.7.1",
+    "mathjs": "^12.1.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
